# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/trunk/xml/Makefile.am $
#
# Used for make dist.
#
# Copyright (C) 2004 Greg Franks <greg@sce.carleton.ca>
# $Id: Makefile.am 10284 2011-05-12 19:13:28Z greg $
# 

pkgdata_DATA =	lqn-core.xsd lqn-sub.xsd lqn.xsd
EXTRA_DIST = 	lqn-core.xsd lqn-sub.xsd lqn.xsd
